# ferkle

./: Cargo.toml
src/: codec.rs  hash.rs  main.rs  objectstore.rs
