[package]
name = "ferkle"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TimothySimons/ferkle"
description = "A Merkle tree implementation of a file system"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["merkle", "tree"]
categories = ["filesystem"]

[dependencies]
flate2 = "1.0.26"
log = "0.4.19"
sha2 = "0.10.7"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",
    "fast-rng",
]